# callisto-sdk

./: readme.md
.github/workflows/: csharp.yml  go.yml  java.yml  js.yml  python.yml  ruby.yml
csharp/: Callisto.Sdk.sln  README.md
go/: .gitignore  README.md  balance.go  balance_test.go  client.go  config.go  enums.go  error_reporter_test.go  errors.go  errors_test.go  go.mod  helpers_test.go  models.go  notify.go  notify_test.go  otp.go  otp_test.go  ptr.go  reporter.go  reporter_test.go  sms.go  sms_test.go  transport.go  transport_test.go  whatsapp.go  whatsapp_test.go
java/: README.md  pom.xml
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: client.ts  config.ts  errors.ts  http.ts  index.ts  models.ts  reporter.ts
js/test/: balance.test.ts  config.test.ts  errors.test.ts  helpers.ts  notify.test.ts  otp.test.ts  reporter.test.ts  sms.test.ts  transport.test.ts  whatsapp.test.ts
python/: .gitignore  README.md  pyproject.toml
python/callisto_sdk/: __init__.py  _config.py  _http.py  _reporter.py  client.py  errors.py  models.py
python/callisto_sdk/resources/: balance.py  notify.py  otp.py  sms.py  whatsapp.py
python/tests/: conftest.py  test_balance.py  test_errors.py  test_notify.py  test_otp.py  test_reporter.py  test_sms.py  test_transport.py  test_whatsapp.py
ruby/: .gitignore  Gemfile  README.md  callisto-sdk.gemspec
ruby/lib/: callisto.rb
ruby/spec/: balance_spec.rb  client_spec.rb  error_reporter_spec.rb  errors_spec.rb  notify_spec.rb  otp_spec.rb  sms_spec.rb  spec_helper.rb  transport_spec.rb  whatsapp_spec.rb
(+108 files in other folders)
