[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "callisto-sdk"
version = "0.1.0"
description = "Official Callisto messaging API SDK for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "respx>=0.20"]

[tool.hatch.build.targets.wheel]
packages = ["callisto_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
